aerostore_macros/tests/ui/compile_fail_reserved_null_bitmask.rs
use aerostore_macros::speedtable;

#[speedtable]
#[repr(C)]
struct BadReservedNullBitmask {
    _null_bitmask: u64,
    altitude: i32,
}

fn main() {}

